[dyad] Implementação de CRUD na página de Clientes - wrote 5 file(s), deleted 1 file(s)

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -72,6 +72,7 @@
   "registration": "Registration",
   "clients": "Clients",
   "client_registration_title": "Client Registration",
+  "client_edit_title": "Edit Client",
   "client_registration_name_label": "First Name",
   "client_registration_name_placeholder": "Client's first name",
   "client_registration_lastname_label": "Last Name",
@@ -85,8 +86,13 @@
   "client_registration_avatar_label": "Avatar URL",
   "client_registration_avatar_placeholder": "https://example.com/avatar.jpg",
   "client_registration_submit_button": "Register Client",
+  "client_update_submit_button": "Update Client",
   "client_registration_success": "Client registered successfully!",
+  "client_update_success": "Client updated successfully!",
   "client_registration_error": "Error registering client: ",
+  "client_update_error": "Error updating client: ",
+  "client_delete_success": "Client deleted successfully!",
+  "client_delete_error": "Error deleting client: ",
   "unauthenticated_user_error": "Unauthenticated user.",
   "customers_title": "Customers",
   "add_customers_button": "Add Customers",
@@ -106,6 +112,9 @@
   "client_status_label": "Status",
   "client_status_placeholder": "Select status",
   "cancel_button": "Cancel",
+  "delete_button": "Delete",
+  "confirm_delete_title": "Are you sure?",
+  "confirm_delete_client_description": "This action cannot be undone. This will permanently delete the client and their associated data.",
   "team": "Team",
   "team_title": "Team Management",
   "add_team_member_button": "Add Team Member",
@@ -270,9 +279,7 @@
   "blocked_time_delete_success": "Blocked time deleted successfully!",
   "blocked_time_delete_error": "Error deleting blocked time: ",
   "fetch_blocked_times_error": "Error fetching blocked times: ",
-  "confirm_delete_title": "Are you sure?",
   "confirm_delete_blocked_time_description": "This action cannot be undone. This will permanently delete the blocked time.",
-  "delete_button": "Delete",
   "blocked_time_recurring": "Recurring",
   "blocked_time_one_time": "One Time",
   "unknown_technician": "Unknown Technician"
