--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -72,6 +72,7 @@
   "registration": "Registro",
   "clients": "Clientes",
   "client_registration_title": "Registro de Clientes",
+  "client_edit_title": "Editar Cliente",
   "client_registration_name_label": "Nombre",
   "client_registration_name_placeholder": "Nombre del cliente",
   "client_registration_lastname_label": "Apellido",
@@ -85,8 +86,13 @@
   "client_registration_avatar_label": "URL del Avatar",
   "client_registration_avatar_placeholder": "https://ejemplo.com/avatar.jpg",
   "client_registration_submit_button": "Registrar Cliente",
+  "client_update_submit_button": "Actualizar Cliente",
   "client_registration_success": "¡Cliente registrado exitosamente!",
+  "client_update_success": "¡Cliente actualizado exitosamente!",
   "client_registration_error": "Error al registrar cliente: ",
+  "client_update_error": "Error al actualizar cliente: ",
+  "client_delete_success": "¡Cliente eliminado exitosamente!",
+  "client_delete_error": "Error al eliminar cliente: ",
   "unauthenticated_user_error": "Usuario no autenticado.",
   "customers_title": "Clientes",
   "add_customers_button": "Añadir Clientes",
@@ -106,6 +112,9 @@
   "client_status_label": "Estado",
   "client_status_placeholder": "Seleccionar estado",
   "cancel_button": "Cancelar",
+  "delete_button": "Eliminar",
+  "confirm_delete_title": "¿Estás seguro?",
+  "confirm_delete_client_description": "Esta acción no se puede deshacer. Esto eliminará permanentemente al cliente y sus datos asociados.",
   "team": "Equipo",
   "team_title": "Gestión de Equipo",
   "add_team_member_button": "Añadir Miembro del Equipo",
@@ -237,5 +246,41 @@
   "payment_method_registration_submit_button": "Cadastrar Forma de Pagamento",
   "payment_method_registration_success": "Forma de pagamento cadastrada com sucesso!",
   "payment_method_registration_error": "Erro ao cadastrar forma de pagamento: ",
-  "days_short": "dias"
+  "days_short": "dias",
+  "blocked_times": "Horas Bloqueadas",
+  "blocked_times_title": "Gestão de Horas Bloqueadas",
+  "add_blocked_time_button": "Adicionar Hora Bloqueada",
+  "search_blocked_times_placeholder": "Pesquise por barbeiro ou motivo",
+  "blocked_time_technician_header": "BARBEIRO",
+  "blocked_time_date_header": "DATA",
+  "blocked_time_time_header": "HORÁRIO",
+  "blocked_time_reason_header": "MOTIVO",
+  "blocked_time_recurring_header": "RECORRENTE",
+  "loading_blocked_times": "Carregando horas bloqueadas...",
+  "no_blocked_times_found": "Nenhuma hora bloqueada encontrada.",
+  "no_blocked_times_found_search": "Nenhuma hora bloqueada corresponde à sua pesquisa.",
+  "blocked_time_registration_title": "Cadastrar Hora Bloqueada",
+  "blocked_time_edit_title": "Editar Hora Bloqueada",
+  "blocked_time_technician_label": "Barbeiro",
+  "blocked_time_technician_placeholder": "Selecione um barbeiro",
+  "blocked_time_start_date_label": "Data de Início",
+  "blocked_time_start_time_label": "Hora de Início",
+  "blocked_time_end_date_label": "Data de Término",
+  "blocked_time_end_time_label": "Hora de Término",
+  "blocked_time_reason_label": "Motivo",
+  "blocked_time_reason_placeholder": "Ex: Férias, Reunião",
+  "blocked_time_recurring_label": "Recorrente",
+  "blocked_time_registration_submit_button": "Cadastrar Hora Bloqueada",
+  "blocked_time_update_submit_button": "Atualizar Hora Bloqueada",
+  "blocked_time_registration_success": "Hora bloqueada cadastrada com sucesso!",
+  "blocked_time_update_success": "Hora bloqueada atualizada com sucesso!",
+  "blocked_time_registration_error": "Erro ao cadastrar hora bloqueada: ",
+  "blocked_time_update_error": "Erro ao atualizar hora bloqueada: ",
+  "blocked_time_delete_success": "Hora bloqueada excluída com sucesso!",
+  "blocked_time_delete_error": "Erro ao excluir hora bloqueada: ",
+  "fetch_blocked_times_error": "Erro ao buscar horas bloqueadas: ",
+  "confirm_delete_blocked_time_description": "Esta ação não pode ser desfeita. Isso excluirá permanentemente a hora bloqueada.",
+  "blocked_time_recurring": "Recorrente",
+  "blocked_time_one_time": "Única Vez",
+  "unknown_technician": "Barbeiro Desconhecido"
 }
