--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -72,6 +72,7 @@
   "registration": "Cadastro",
   "clients": "Clientes",
   "client_registration_title": "Cadastro de Clientes",
+  "client_edit_title": "Editar Cliente",
   "client_registration_name_label": "Nome",
   "client_registration_name_placeholder": "Nome do cliente",
   "client_registration_lastname_label": "Sobrenome",
@@ -85,8 +86,13 @@
   "client_registration_avatar_label": "URL do Avatar",
   "client_registration_avatar_placeholder": "https://exemplo.com/avatar.jpg",
   "client_registration_submit_button": "Cadastrar Cliente",
+  "client_update_submit_button": "Atualizar Cliente",
   "client_registration_success": "Cliente cadastrado com sucesso!",
+  "client_update_success": "Cliente atualizado com sucesso!",
   "client_registration_error": "Erro ao cadastrar cliente: ",
+  "client_update_error": "Erro ao atualizar cliente: ",
+  "client_delete_success": "Cliente excluído com sucesso!",
+  "client_delete_error": "Erro ao excluir cliente: ",
   "unauthenticated_user_error": "Usuário não autenticado.",
   "customers_title": "Clientes",
   "add_customers_button": "Adicionar Clientes",
@@ -106,6 +112,9 @@
   "client_status_label": "Status",
   "client_status_placeholder": "Selecione o status",
   "cancel_button": "Cancelar",
+  "delete_button": "Excluir",
+  "confirm_delete_title": "Você tem certeza?",
+  "confirm_delete_client_description": "Esta ação não pode ser desfeita. Isso excluirá permanentemente o cliente e seus dados associados.",
   "team": "Equipe",
   "team_title": "Gestão de Equipe",
   "add_team_member_button": "Adicionar Membro da Equipe",
@@ -270,9 +279,7 @@
   "blocked_time_delete_success": "Hora bloqueada excluída com sucesso!",
   "blocked_time_delete_error": "Erro ao excluir hora bloqueada: ",
   "fetch_blocked_times_error": "Erro ao buscar horas bloqueadas: ",
-  "confirm_delete_title": "Tem certeza?",
   "confirm_delete_blocked_time_description": "Esta ação não pode ser desfeita. Isso excluirá permanentemente a hora bloqueada.",
-  "delete_button": "Excluir",
   "blocked_time_recurring": "Recorrente",
   "blocked_time_one_time": "Única Vez",
   "unknown_technician": "Barbeiro Desconhecido"
